--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "chai": "^4.3.4",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.2",
+    "hardhat": "^2.8.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
